; ModuleID = '/home/carl/AnghaBench/libgit2/tests/notes/extr_notes.c_assert_note_equal.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/notes/extr_notes.c_assert_note_equal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_repo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32*)* @assert_note_equal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_note_equal(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @git_note_message(i32* %8)
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @cl_assert_equal_s(i32 %9, i8* %10)
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @git_note_id(i32* %12)
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @cl_assert_equal_oid(i32 %13, i32* %14)
  %16 = load i32, i32* @_repo, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @git_blob_lookup(i32** %7, i32 %16, i32* %17)
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @git_note_message(i32* %20)
  %22 = load i32*, i32** %7, align 8
  %23 = call i64 @git_blob_rawcontent(i32* %22)
  %24 = inttoptr i64 %23 to i8*
  %25 = call i32 @cl_assert_equal_s(i32 %21, i8* %24)
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @git_blob_free(i32* %26)
  ret void
}

declare dso_local i32 @cl_assert_equal_s(i32, i8*) #1

declare dso_local i32 @git_note_message(i32*) #1

declare dso_local i32 @cl_assert_equal_oid(i32, i32*) #1

declare dso_local i32 @git_note_id(i32*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_blob_lookup(i32**, i32, i32*) #1

declare dso_local i64 @git_blob_rawcontent(i32*) #1

declare dso_local i32 @git_blob_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
